# picoterm

./: .gitignore  LICENSE  README.md  compiling.md  debug.md  find_into.sh  picoterm-port.md  releases.md  set_env.sh
40Column Colour/: CMakeLists.txt  main.c  main.h  picoterm.c  picoterm.h  pmhid.h
40col-color/: CMakeLists.txt  main.c  main.h  picoterm.c  picoterm_conio.c  picoterm_conio.h  picoterm_core.c  picoterm_core.h  picoterm_screen.c  picoterm_screen.h  speccyfont.h  tusb_config.h
80Column Mono/: CMakeLists.txt  main.c  main.h  picoterm.c  picoterm.h  pmhid.h
80col-mono/: CMakeLists.txt  cp437.c  main.c  main.h  picoterm.c  picoterm.h  picoterm_conio.c  picoterm_conio.h  picoterm_core.c  picoterm_core.h  picoterm_logo.c  picoterm_logo.h  picoterm_screen.c  picoterm_screen.h
cli/: cli.c  cli.h  readme.md  tinyexpr.c  user_funcs.c  user_funcs.h
common/: keybd.c  keybd.h  pca9536.c  pca9536.h  picoterm_config.c  picoterm_config.h  picoterm_conio_config.c  picoterm_conio_config.h  picoterm_cursor.c  picoterm_cursor.h  picoterm_debug.c  picoterm_debug.h  picoterm_dec.c  picoterm_dec.h  picoterm_harddef.h  picoterm_i2c.c  picoterm_i2c.h  picoterm_stddef.c  picoterm_stddef.h  picoterm_stdio.c  picoterm_stdio.h  pio_sd.c  pio_sd.h  pio_spi.c  pio_spi.h  pmhid.h  uart_tx.pio
docs/: NupetSciiDemo.hex  NupetSciiDemo.psci  NupetSciiDemo.raw  add-keyboard-layout.md  cli.md  compiling.md  debug.md  firmware-upgrade.md  hotkey.md  picoterm-conn-hr10.md  picoterm-conn.md  resources.md  using-nupetscii.md
font-suite/: add-font-face.md  compile_font.py  cp437.c  cp437.data  font8.c  mono8_cp437.c  mono8_nupetscii.c  nupetscii.c  nupetscii.data  olivetti_thin.c  olivetti_thin.readme  olivetti_thin_cp437.c  olivetti_thin_nupetscii.c  readme.md
nupetscii-font/: compile_font.py  nupetscii.c  nupetscii.data  psci-extract.py  readme.md
pio_fatfs/: readme.txt  tf_card.c  tf_card.h
test-suite/: readme.md  test_esc.py  test_receive.py
